[tool.poetry]
name = "hyperon-das-atomdb"
version = "0.1.7"
description = "Persistence layer for Distributed AtomSpace"
authors = ["marcocapozzoli <marcocapozzoli90@gmail.com>"]
readme = "README.md"
packages = [{include = "hyperon_das_atomdb"}]

[tool.poetry.dependencies]
python = "^3.8.5"
redis = "^5.0.0"
pymongo = "^4.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.7.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
