[project]
name = "hyperon_das_atomdb_cpp"
version = "0.0.1"
description = "Atom Space DB for Hyperon DAS"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Andre Senna", email = "andre@singularitynet.io" },
    { name = "Angelo Probst", email = "angelo.probst@singularitynet.io" },
    { name = "Edgar Brissow", email = "edgar.brissow@singularitynet.io" },
    { name = "Marco Capozzoli", email = "marco.capozzoli@singularitynet.io" },
    { name = "Pedro Costa", email = "pedro.costa@singularitynet.io" },
    { name = "Rafael Levi", email = "rafael.levi@singularitynet.io" }
]

[project.urls]
Homepage = "https://github.com/singnet/das-atom-db"

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=2.1.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.10"
build.verbose = true

# Setuptools-style build caching in a local directory
build-dir = "build"

# Build stable ABI wheels for CPython 3.10+
wheel.py-api = "cp310"
